Corrigindo lista de movimentações

--- a/app/views/transaction_items/index.html.erb
+++ b/app/views/transaction_items/index.html.erb
@@ -87,6 +87,8 @@
               <td></td>
             </tr>
 
+            <% break if @debt.amortization_type == 'price' %>
+
           <% end %>
         <% end %>
 
