Consertado intervalo de meses de movimentações

--- a/app/views/transaction_items/index.html.erb
+++ b/app/views/transaction_items/index.html.erb
@@ -33,13 +33,10 @@
       </tr>
     </thead>
     
-    <tbody>
-      <% @start_date ? future_transactions = ProjectionDebt.new(@debt, @start_date).transaction_items : [] %>
+    <tbody>      
 
-      <% all_transactions = @transaction_items.includes(:transaction_info) + future_transactions %>
-      <% all_transactions = all_transactions.sort_by {|t| [t.date, t.transaction_info.category_number, t.transaction_info.slug] } %>
-
-      <% all_transactions.each_with_index do |transaction_item, index| %>
+   
+      <%  @transaction_items.each_with_index do |transaction_item, index| %>
           
         <% transaction_item.editable? ? transaction_class = 'edit-transaction' : transaction_class = 'block-edit-transaction' %>
         <% transaction_edit_path = edit_debt_transaction_item_path(@debt, transaction_item) if transaction_item.editable? %>
@@ -77,21 +74,19 @@
           
         </tr>
 
-        <% if (all_transactions[index + 1].present? && (transaction_item.date).month != all_transactions[index + 1].date.month) %>
+        <% if (@transaction_items[index + 1].present? && (transaction_item.date).month != @transaction_items[index + 1].date.month) %>
          
-          <% (0..(all_transactions[index + 1].date.month - transaction_item.date.month).abs - 1).each do |month| %>
+          <% (0..( @transaction_items[index + 1].date.year * 12 + @transaction_items[index + 1].date.month) - (transaction_item.date.year * 12 + transaction_item.date.month) - 1 ).each do |month| %>
 
             <tr class="table-info">
               <td class="td-right" colspan="2"><strong>Saldo em <%= (transaction_item.date + month.month).end_of_month %>:</strong></td>
               <td class="td-right"><strong><%= big_decimal_to_currency(transaction_item.final_outstanding_balance) if transaction_item.final_outstanding_balance != 0 %></strong></td>
               <td></td>
             </tr>
-
-            <% break if @debt.amortization_type == 'price' %>
-
           <% end %>
+          
         <% end %>
-
+      
       <% end %>              
     </tbody>
   </table>
