--- a/app/views/month_reports/show.pdf.erb
+++ b/app/views/month_reports/show.pdf.erb
@@ -65,9 +65,9 @@
 					<table class="table table-sm table-striped text-right">
 						<thead>
 							<tr>
-								<th>Mês/Ano</th>
-								<th>Valores - Moeda Original</th>
-								<th>Valores em R$</th>
+								<th style="text-align:right;">Mês/Ano</th>
+								<th style="text-align:right;">Valores - Moeda Original</th>
+								<th style="text-align:right;">Valores em R$</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -99,8 +99,8 @@
 					<table class="table table-sm table-striped text-right">
 						<thead>
 							<tr>
-								<th>Mês/Ano</th>
-								<th>Valores - Moeda Original</th>	
+								<th style="text-align:right;">Mês/Ano</th>
+								<th style="text-align:right;">Valores - Moeda Original</th>	
 							</tr>
 						</thead>
 						<tbody>
@@ -121,11 +121,11 @@
 		<table class="table table-sm table-striped text-right">
 			<thead>
 				<tr>
-					<th></th>
-					<th>Principal em R$</th>
-					<th>Juros em R$</th>
-					<th>Outros encargos em R$</th>
-					<th>Total</th>
+					<th style="text-align:right;"></th>
+					<th style="text-align:right;">Principal em R$</th>
+					<th style="text-align:right;">Juros em R$</th>
+					<th style="text-align:right;">Outros encargos em R$</th>
+					<th style="text-align:right;">Total</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -159,11 +159,11 @@
 		<table class="table table-sm table-striped text-right">
 			<thead>
 				<tr>
-					<th></th>
-					<th>Principal em R$</th>
-					<th>Juros em R$</th>
-					<th>Outros encargos em R$</th>
-					<th>Total</th>
+					<th style="text-align:right;"></th>
+					<th style="text-align:right;">Principal em R$</th>
+					<th style="text-align:right;">Juros em R$</th>
+					<th style="text-align:right;">Outros encargos em R$</th>
+					<th style="text-align:right;">Total</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -201,11 +201,11 @@
 		<table class="table table-sm table-striped text-right">
 			<thead>
 				<tr>
-					<th></th>
-					<th>Principal em R$</th>
-					<th>Juros em R$</th>
-					<th>Outros encargos em R$</th>
-					<th>Total</th>
+					<th style="text-align:right;"></th>
+					<th style="text-align:right;">Principal em R$</th>
+					<th style="text-align:right;">Juros em R$</th>
+					<th style="text-align:right;">Outros encargos em R$</th>
+					<th style="text-align:right;">Total</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -230,12 +230,12 @@
 		<table class="table table-sm table-striped text-right">
 			<thead>
 				<tr>
-					<th>Ano</th>
-					<th>Principal em Moeda Original</th>
-					<th>Principal em R$</th>
-					<th>Juros em R$</th>
-					<th>Outros encargos em R$</th>
-					<th>Total</th>
+					<th style="text-align:right;">Ano</th>
+					<th style="text-align:right;">Principal em Moeda Original</th>
+					<th style="text-align:right;">Principal em R$</th>
+					<th style="text-align:right;">Juros em R$</th>
+					<th style="text-align:right;">Outros encargos em R$</th>
+					<th style="text-align:right;">Total</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -277,10 +277,10 @@
 		<table class="table table-sm table-striped text-right">	
 			<thead>
 				<tr>
-					<th>Principal em R$</th>
-					<th>Juros em R$</th>
-					<th>Outros encargos em R$</th>
-					<th>Total</th>
+					<th style="text-align:right;">Principal em R$</th>
+					<th style="text-align:right;">Juros em R$</th>
+					<th style="text-align:right;">Outros encargos em R$</th>
+					<th style="text-align:right;">Total</th>
 				</tr>
 			</thead>
 			<tbody>
