Adicionado campo de casas decimais

--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -35,8 +35,13 @@
       <div class="col-sm">
         <%= f.input :contract_value %>
       </div>
-      <div class="col-sm">
-        <%= f.association :currency %>
+      <div class="row">
+        <div class="col-sm">
+          <%= f.association :currency %>
+        </div>
+        <div class="col-sm">
+          <%= f.input :decimal_places %>
+        </div>
       </div>      
     </div>
 
