--- a/app/views/month_reports/show.pdf.erb
+++ b/app/views/month_reports/show.pdf.erb
@@ -5,7 +5,7 @@
     <title>SIGDIV</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= wicked_pdf_stylesheet_link_tag('application', media: 'all', 'data-turbolinks-track' => true) %>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="utf-8" />
   </head>
