--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,12 +103,7 @@ hr.dashed-hr {
   text-align: right; 
 }
 
-.report-currency {
-  max-width: 25%;
-  margin: auto;
-}
-
-.alert {
+.alert-sigdiv {
   margin-top: 4px;
   float: right;
 }
