--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="position-fixed debt-header">
   <% if notice.present? %>
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-sigdiv alert-success" role="alert">
       <p id="notice" class="mb-0" ><%= notice %></p>
     </div>
   <% end %>
