--- a/app/views/month_reports/show.pdf.erb
+++ b/app/views/month_reports/show.pdf.erb
@@ -49,12 +49,19 @@
 		    </td>
 		  </tr>
 		</table>
-		<div class="report-currency alert alert-primary text-center" role="alert">
-		  <strong>
-			  UPR em <%= Date.new(2019, 2).end_of_month %>:	  
-			  21,76552574
-			</strong>
-		</div>
+		<table style="width:100%;">
+			<tr>
+				<td style="width:50%;"></td>
+		    <td style="width:50%;">
+					<div class="alert alert-primary text-left">
+					  <strong>
+						  Fator de Conversão em <%= Date.new(2019, 2).end_of_month %>:	  
+						  21,76552574
+						</strong>
+					</div>
+				</td>
+			</tr>
+		</table>
 
 		<h5><strong>B - Esquema de Liberação de Recursos</strong></h5>
 		<hr>
