Modificações em relatório

--- a/app/views/month_reports/show.pdf.erb
+++ b/app/views/month_reports/show.pdf.erb
@@ -68,10 +68,10 @@
 		<table style="width: 100%">
 		  <tr>
 		    <td style="width: 55%">
-					<h6><strong>1 - Parcelas Recebidas </strong></h6>
+					<h5><strong>1 - Parcelas Recebidas </strong></h5>
 
-					<table class="table table-sm table-striped text-right">
-						<thead>
+					<table class="table table-sm table-bordered text-right">
+						<thead class="thead-light">
 							<tr>
 								<th style="text-align:right;">Mês/Ano</th>
 								<th style="text-align:right;">Valores - Moeda Original</th>
@@ -102,10 +102,10 @@
 			 	<td style="width:5%;vertical-align:top;"></td>
 
 			 	<td style="width:40%;vertical-align:top;">
-					<h6><strong>2 - Parcelas à Receber </strong></h6>
+					<h5><strong>2 - Parcelas à Receber </strong></h5>
 
-					<table class="table table-sm table-striped text-right">
-						<thead>
+					<table class="table table-sm table-bordered text-right">
+						<thead class="thead-light">
 							<tr>
 								<th style="text-align:right;">Mês/Ano</th>
 								<th style="text-align:right;">Valores - Moeda Original</th>	
@@ -124,10 +124,10 @@
 
 		<h5><strong>C - Esquema de Pagamentos</strong></h5>
 		<hr>
-		<h6><strong>1- Realizado no Exercício</strong></h6>
+		<h5><strong>1- Realizado no Exercício</strong></h5>
 
-		<table class="table table-sm table-striped text-right">
-			<thead>
+		<table class="table table-sm table-bordered text-right">
+			<thead class="thead-light">
 				<tr>
 					<th style="text-align:right;"></th>
 					<th style="text-align:right;">Principal em R$</th>
@@ -162,10 +162,10 @@
 
 		</table>
 
-		<h6><strong>2- A Realizar no Exercício</strong></h6>
+		<h5><strong>2- A Realizar no Exercício</strong></h5>
 
-		<table class="table table-sm table-striped text-right">
-			<thead>
+		<table class="table table-sm table-bordered text-right">
+			<thead class="thead-light">
 				<tr>
 					<th style="text-align:right;"></th>
 					<th style="text-align:right;">Principal em R$</th>
@@ -204,10 +204,10 @@
 			</tbody>
 		</table>
 
-		<h6><strong>3- A Realizar de Outros Exercícios</strong></h6>
+		<h5><strong>3- A Realizar de Outros Exercícios</strong></h5>
 
-		<table class="table table-sm table-striped text-right">
-			<thead>
+		<table class="table table-sm table-bordered text-right">
+			<thead class="thead-light">
 				<tr>
 					<th style="text-align:right;"></th>
 					<th style="text-align:right;">Principal em R$</th>
@@ -233,10 +233,10 @@
 			</tbody>
 		</table>
 
-		<h6><strong>4- A Realizar nos Próximos Exercícios</strong></h6>
+		<h5><strong>4- A Realizar nos Próximos Exercícios</strong></h5>
 
-		<table class="table table-sm table-striped text-right">
-			<thead>
+		<table class="table table-sm table-bordered text-right">
+			<thead class="thead-light">
 				<tr>
 					<th style="text-align:right;">Ano</th>
 					<th style="text-align:right;">Principal em Moeda Original</th>
@@ -280,10 +280,10 @@
 			</tbody>
 		</table>
 
-		<h6><strong>5- Saldo Devedor</strong></h6>
+		<h5><strong>5- Saldo Devedor</strong></h5>
 
-		<table class="table table-sm table-striped text-right">	
-			<thead>
+		<table class="table table-sm table-bordered text-right">	
+			<thead class="thead-light">
 				<tr>
 					<th style="text-align:right;">Principal em R$</th>
 					<th style="text-align:right;">Juros em R$</th>
@@ -314,7 +314,7 @@
 
 
 		<table class="table table-sm table-bordered">
-			<thead>
+			<thead class="thead-light">
 				<tr>
 					<th><h5><strong>E - Local e Data</strong></h5></th>
 					<th><h5><strong>F - Órgão</strong></h5></th>
