--- a/app/views/month_reports/show.pdf.erb
+++ b/app/views/month_reports/show.pdf.erb
@@ -5,12 +5,13 @@
     <title>SIGDIV</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= wicked_pdf_stylesheet_link_tag('application', media: 'all', 'data-turbolinks-track' => true) %>
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <%= wicked_pdf_stylesheet_link_tag('application', media: 'all', 'data-turbolinks-track' => true) %>
     <meta charset="utf-8" />
   </head>
 
-  <body>
+  <body class="report">
 		<table style="width:85%;">
 			<tr>
 		  	<td>		  	
