--- a/app/views/month_reports/show.pdf.erb
+++ b/app/views/month_reports/show.pdf.erb
@@ -5,7 +5,7 @@
     <title>SIGDIV</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    
     
     <meta charset="utf-8" />
   </head>
@@ -56,7 +56,7 @@
 					<div class="alert alert-primary text-left">
 					  <strong>
 						  Fator de Conversão em <%= Date.new(2019, 2).end_of_month %>:	  
-						  <%= @projection_debt.transactions.last.exchange_rate %>
+						  <%= @projection_debt.transaction_items.last.exchange_rate %>
 						</strong>
 					</div>
 				</td>
