--- a/app/views/transaction_items/_form.html.erb
+++ b/app/views/transaction_items/_form.html.erb
@@ -2,11 +2,11 @@
   <div class="modal-body">
     <%= f.input :id, as: :hidden %>
     <%= f.input :transaction_info_id, as: :hidden %>
-    <%= f.input :value_brl, as: :string, placeholder: "Digite o valor", input_html: {value: big_decimal_to_currency(f.object.value_brl, 2) || '', class: 'currency-brl mask_field'} %> 
+    <%= f.input :value_brl, as: :string, placeholder: "Digite o valor", input_html: {value: big_decimal_to_currency(f.object.value_brl, 2) || '', class: 'currency-brl mask-field'} %> 
     <%= f.input :exchange_rate, placeholder: "Digite o valor",  as: :string, input_html: {class: 'currency_exchange_rate'}%>
     <div class="row">
       <div class="col-6">
-        <%= f.input :value, placeholder: "Digite o valor", as: :string, input_html: {value: big_decimal_to_currency(f.object.value, 6),class: 'currency mask_field'} %>
+        <%= f.input :value, placeholder: "Digite o valor", as: :string, input_html: {value: big_decimal_to_currency(f.object.value, 6), class: 'currency mask-field'} %>
       </div>
       <div class="col-6">
         <%= f.input :formula %>
@@ -40,7 +40,7 @@
     updateValue();    
   });
 
-  $('.mask_field').on('keyup', function(e) {    
+  $('.mask-field').on('keyup', function(e) {    
     $('.currency-brl').mask('#.##0,00', {reverse: true});
     $('.currency').mask('#.##0,00000', {reverse: true});
   });
@@ -49,6 +49,8 @@
     if($.isNumeric($('#transaction_item_exchange_rate').val())){
       $('#transaction_item_value').val((Big($('#transaction_item_value_brl').val().replace(/[.]/g, '').replace(/[,]/g, '.')) * $('#transaction_item_exchange_rate').val().replace(/[,]/g, '.')).toFixed(5));
     }
+    $('.currency').unmask();
+    $('.currency').mask('#.##0,00000', {reverse: true});
   };
 
 </script>
