--- a/app/views/transaction_items/new.html.erb
+++ b/app/views/transaction_items/new.html.erb
@@ -1,5 +1,7 @@
 <div class="modal-header">
-  <h5 class="modal-title" id="exampleModalLabel">Registrar movimentação</h5>
+	<% @transaction_item.withdraw? ? transaction_type = "desembolso" : transaction_type = "movimentação"%>
+
+  <h5 class="modal-title" id="exampleModalLabel">Registrar <%= transaction_type %></h5>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
