--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -61,7 +61,8 @@
     <div class="row">
       <div class="col-sm">
         <%= f.input :grace_period, start_year: Date.today.year - 20, end_year: Date.today.year + 40 %>
-      </div>       
+        <%= f.input :start_amt_next_month_to_grace_period %>
+      </div>
       <div class="col-sm">
         <%= f.input :amortization_period, start_year: Date.today.year - 20, end_year: Date.today.year + 40  %>
       </div>
