Adicionado tipo de movimentação

--- a/app/views/transaction_items/_form.html.erb
+++ b/app/views/transaction_items/_form.html.erb
@@ -2,6 +2,8 @@
   <div class="modal-body">
     <%= f.input :id, as: :hidden %>
     <%= f.input :transaction_info_id, as: :hidden %>
+    <%= f.input :transaction_info_id, label: 'Tipo', collection: debt.transaction_infos, label_method: :category_name, value_method: :id %>
+    
     <%= f.input :value_brl, as: :string, placeholder: "Digite o valor", input_html: {value: big_decimal_to_currency(f.object.value_brl, 2) || '', class: 'currency-brl mask-field'} %> 
     <%= f.input :exchange_rate, placeholder: "Digite o valor",  as: :string, input_html: {class: 'currency_exchange_rate'}%>
     <div class="row">
