Implementando formula em tempo real

--- a/app/views/transaction_items/_form.html.erb
+++ b/app/views/transaction_items/_form.html.erb
@@ -1,12 +1,10 @@
 <%= simple_form_for transaction_item, url: new_debt_transaction_item_path(debt), as: :transaction_item do |f| %>
   <div class="modal-body">
-    <%= f.input :id, as: :hidden %>
-    <%= f.input :transaction_info_id, as: :hidden %>
-    <%= f.input :transaction_info_id, label: 'Tipo', collection: debt.transaction_infos, label_method: :category_name, value_method: :id %>
+    <%= f.input :transaction_info_id, label: 'Tipo', collection: debt.transaction_infos, label_method: :category_name, value_method: :id, disabled: f.object.persisted? %>
     
     <%= f.input :value_brl, as: :string, placeholder: "Digite o valor", input_html: {value: big_decimal_to_currency(f.object.value_brl, 2) || '', class: 'currency-brl mask-field'} %> 
     <%= f.input :exchange_rate, placeholder: "Digite o valor",  as: :string, input_html: {class: 'currency_exchange_rate'}%>
-    <div class="row">
+    <div class="row transaction-formula">
       <div class="col-6">
         <%= f.input :value, placeholder: "Digite o valor", as: :string, input_html: {value: big_decimal_to_currency(f.object.value, 6), class: 'currency mask-field'} %>
       </div>
@@ -54,6 +52,15 @@
     $('.currency').unmask();
     $('.currency').mask('#.##0,00000', {reverse: true});
   };
+
+  $('div.transaction_item_formula').on('keyup', 'input', function(e) {    
+    $.get('/formulas/show/' + $('.transaction_item_formula input').val(), function(data){
+      $('.transaction_item_value').find('input').val('oi')
+    }).done(function(data){
+      console.log('oi')
+      $('.transaction_item_value').find('input').val('oi')
+    })
+  })
 
 </script>
 
